# stellar

./: Justfile
database/: Justfile  atlas.hcl
database/schema/: devices.atlas.hcl  users.atlas.hcl
device-registry/: Cargo.toml  Justfile
device-registry/src/: bcrypt.rs  main.rs
device-registry/src/devices/: create.rs  device.rs  mod.rs  password_generator.rs
device-registry/src/users/: create.rs  mod.rs  read.rs  user.rs
firmware/: Cargo.toml  diagram.json  wokwi.toml
firmware/src/: main.rs
firmware/src/leds/: controller.rs
firmware/src/leds/animations/: animation.rs  breathe_in_out.rs  mod.rs  sprint_out_back.rs
