[package]
publish = false
name = "stellar-device-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
cuid = "1.3.2"
passwords = "3.1.16"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = "0.7.4"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
